#======================================================================
#
# MODULE.bazel -
#
# Created by liubang on 2023/04/08 15:28
# Last Modified: 2023/04/08 15:28
#
#======================================================================
module(
    name = "leetcode",
    version = "0.0.1",
)

bazel_dep(name = "googletest", version = "1.12.1")
